[gd_scene load_steps=4 format=3 uid="uid://chhvyoiwnhv4"]

[ext_resource type="Script" path="res://Enemies/Scripts/EnemyRepelled.gd" id="1_hqgpt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cw366"]
radius = 120.266

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ulai"]
size = Vector2(32, 8)

[node name="EnemyRepelled" type="Area2D"]
script = ExtResource("1_hqgpt")
attackTag = "Repelled"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cw366")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_3ulai")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
